# docs/swagger.json
@@ -137,14 +137,14 @@
                 }
             }
         },
-        "/todo": {
+        "/task": {
             "get": {
                 "security": [
                     {
                         "ApiAuth": []
                     }
                 ],
-                "description": "Get user todos",
+                "description": "Get user tasks",
                 "consumes": [
                     "application/json"
                 ],
@@ -152,9 +152,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Todo"
+                    "Task"
                 ],
-                "summary": "Getting todos",
+                "summary": "Getting tasks",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -169,7 +169,7 @@
                                         "data": {
                                             "type": "array",
                                             "items": {
-                                                "$ref": "#/definitions/domain.Todo"
+                                                "$ref": "#/definitions/domain.Task"
                                             }
                                         }
                                     }
@@ -203,7 +203,7 @@
                         "ApiAuth": []
                     }
                 ],
-                "description": "Create todo by input data",
+                "description": "Create task by input data",
                 "consumes": [
                     "application/json"
                 ],
@@ -211,9 +211,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Todo"
+                    "Task"
                 ],
-                "summary": "Creating todo",
+                "summary": "Creating task",
                 "parameters": [
                     {
                         "description": "input data",
@@ -221,7 +221,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/domain.CreateTodoInput"
+                            "$ref": "#/definitions/domain.CreateTaskInput"
                         }
                     }
                 ],
@@ -237,7 +237,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/domain.Todo"
+                                            "$ref": "#/definitions/domain.Task"
                                         }
                                     }
                                 }
@@ -265,14 +265,14 @@
                 }
             }
         },
-        "/todo/{id}": {
+        "/task/{id}": {
             "get": {
                 "security": [
                     {
                         "ApiAuth": []
                     }
                 ],
-                "description": "Get one todo by id",
+                "description": "Get one task by id",
                 "consumes": [
                     "application/json"
                 ],
@@ -280,9 +280,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Todo"
+                    "Task"
                 ],
-                "summary": "Getting one todo",
+                "summary": "Getting one task",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -295,7 +295,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/domain.Todo"
+                                            "$ref": "#/definitions/domain.Task"
                                         }
                                     }
                                 }
@@ -328,7 +328,7 @@
                         "ApiAuth": []
                     }
                 ],
-                "description": "Update todo by input data",
+                "description": "Update task by input data",
                 "consumes": [
                     "application/json"
                 ],
@@ -336,9 +336,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Todo"
+                    "Task"
                 ],
-                "summary": "Updating todo",
+                "summary": "Updating task",
                 "parameters": [
                     {
                         "description": "input data",
@@ -346,7 +346,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/domain.UpdateTodoInput"
+                            "$ref": "#/definitions/domain.UpdateTaskInput"
                         }
                     }
                 ],
@@ -362,7 +362,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/domain.Todo"
+                                            "$ref": "#/definitions/domain.Task"
                                         }
                                     }
                                 }
@@ -395,7 +395,7 @@
                         "ApiAuth": []
                     }
                 ],
-                "description": "Delete todo by id",
+                "description": "Delete task by id",
                 "consumes": [
                     "application/json"
                 ],
@@ -403,9 +403,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Todo"
+                    "Task"
                 ],
-                "summary": "Deleting todo",
+                "summary": "Deleting task",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -448,7 +448,7 @@
         }
     },
     "definitions": {
-        "domain.CreateTodoInput": {
+        "domain.CreateTaskInput": {
             "type": "object",
             "required": [
                 "name"
@@ -489,7 +489,7 @@
                 }
             }
         },
-        "domain.Todo": {
+        "domain.Task": {
             "type": "object",
             "properties": {
                 "created_at": {
@@ -509,7 +509,7 @@
                 }
             }
         },
-        "domain.UpdateTodoInput": {
+        "domain.UpdateTaskInput": {
             "type": "object",
             "required": [
                 "name"
